<resources>
    <string name="app_name">Llx_02</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_a_message">Button-A</string>
    <string name="text_view_a_message">2019年的刘力勋！</string>
    <string name="image_view_a_message">Image_View_A</string>

    <string name="button_b_message">Button-B</string>
    <string name="text_view_b_message">2019年的刘力勋！</string>
    <string name="image_view_b_message">Image_View_B</string>

    <string name="button_c1_message">Button-C</string>
    <string name="button_c2_message">Go to F</string>
    <string name="text_view_c_message">那个时候的你！</string>
    <string name="image_view_c_message">Image_View_C</string>

    <string name="button_d1_message">Button-D</string>
    <string name="button_d2_message">Go to E</string>
    <string name="image_view_d_message">Image_View_D</string>

    <string name="button_e1_message">Button-E</string>
    <string name="button_e2_message">Back to A</string>
    <string name="image_view_e1_message">Image_View_E1</string>
    <string name="image_view_e2_message">Image_View_E2</string>

    <string name="button_f1_message">+</string>
    <string name="button_f2_message">-</string>
    <string name="button_f3_message">Go to C</string>
    <string name="image_view_f1_message">Image_View_F1</string>
    <string name="text_view_f1_message">0</string>
    <string name="text_view_f2_message">我喜欢上学！</string>









</resources>